# dsh-etl-search-ai-2025

./: .gitignore  README.md  docker-compose.yml  que.txt  start-all.sh
backend/: .env.example  Dockerfile  README.md  benchmark_models.py  cli_main.py  main.py  metadata-file-identifiers.txt  pyproject.toml
backend/src/: __init__.py  cli.py  config.py  logging_config.py
backend/src/api/: __init__.py  app.py  exceptions.py
backend/src/api/middleware/: __init__.py  logging.py
backend/src/api/routes/: __init__.py  chat.py  datasets.py  health.py  search.py
backend/src/infrastructure/: __init__.py  database.py  http_client.py  metadata_cache.py  migrations.py
backend/src/models/: __init__.py  database_models.py  schemas.py
backend/src/repositories/: __init__.py  base_repository.py  data_file_repository.py  dataset_repository.py  metadata_document_repository.py  supporting_document_repository.py  unit_of_work.py
backend/src/services/: __init__.py  ceh_extractor.py  docx_extractor.py  iso19139_parser.py  json_parser.py  metadata_parser.py  pdf_extractor.py  rdf_parser.py  schema_org_parser.py  supporting_doc_discoverer.py  supporting_doc_downloader.py  txt_extractor.py  web_folder_traverser.py
backend/src/services/architecture/: __init__.py  etl_architecture.py
backend/src/services/chat/: __init__.py  chat_service.py  ollama_service.py
backend/src/services/document_extraction/: __init__.py  document_extractor.py  document_extractor_impl.py  docx_extractor.py  html_extractor.py  pdf_extractor.py  txt_extractor.py  zip_extractor.py
backend/src/services/embeddings/: __init__.py  embedding_service.py  indexing_service.py  vector_store.py
backend/src/services/etl/: __init__.py  etl_error_handler.py  etl_optimizer.py  etl_service.py
backend/src/services/extractors/: __init__.py  ceh_extractor.py  dataset_file_extractor.py  web_folder_traverser.py  zip_extractor.py
backend/src/services/metadata_enrichment/: __init__.py  metadata_enrichment_impl.py
backend/src/services/observability/: __init__.py  span_helpers.py  trace_decorators.py  tracing_config.py
backend/src/services/parsers/: __init__.py  iso19139_parser.py  json_parser.py  rdf_parser.py  schema_org_parser.py
backend/src/services/search/: __init__.py  search_service.py
backend/src/services/supporting_documents/: __init__.py  supporting_doc_discoverer.py  supporting_doc_downloader.py
backend/tests/: conftest.py  test_api.py  test_ceh_extractor.py  test_cli.py  test_config.py  test_database.py  test_document_extractors.py  test_document_text_extractor.py  test_embeddings.py  test_etl_error_handler.py  test_etl_service.py  test_integration_embeddings.py  test_iso19139_parser.py  test_json_parser.py  test_models.py  test_rdf_parser.py  test_schema_org_parser.py  test_search_service.py  test_supporting_doc_discoverer.py  test_supporting_doc_downloader.py  test_unit_of_work.py  test_web_folder_traverser.py  test_zip_extractor.py
backend/tests/e2e/: __init__.py  conftest.py  test_full_pipeline.py
backend/tests/fixtures/: __init__.py
backend/tests/integration/: __init__.py  conftest.py  test_api.py  test_etl_service.py  test_integration_embeddings.py  test_search_service.py
backend/tests/performance/: __init__.py  conftest.py  test_load_performance.py
backend/tests/unit/: __init__.py  conftest.py  test_api_middleware.py  test_base_repository.py  test_chat_api.py  test_chat_service.py  test_data_file_repository.py  test_dataset_file_extractor.py  test_dataset_repository.py  test_document_extractor_impl.py  test_etl_embedding_pipeline.py  test_etl_error_handler.py  test_etl_optimizer.py  test_http_client.py  test_iso19139_parser.py  test_json_parser.py  test_logging_config.py  test_metadata_cache.py  test_metadata_document_repository.py  test_metadata_enrichment.py  test_observability.py  test_ollama_service.py  test_rdf_parser.py  test_schema_org_parser.py  test_supporting_doc_discoverer.py  test_supporting_document_repository.py  test_vector_store.py
docs/AI-chat-conversation/AI-chat-summary/: 01-FULL_SESSION.md  02-FULL_SESSION.md  03-FULL_SESSION.md  04-FULL_SESSION.md  05-FULL_SESSION.md  06-FULL_SESSION.md  07-FULL_SESSION.md.md  08-FULL_SESSION.md  09-FULL_SESSION.md  14.md  (+22 more)
frontend/: Dockerfile  README.md  docker-server.js  package-lock.json  package.json  vite.config.ts
frontend/src/: app.css
(+54 files in other folders)
