[project]
name = "dsh-etl-search-ai"
version = "0.1.0"
description = "CEH Dataset Discovery System with Semantic Search and AI Chat"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.28.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.3.0",
    "ollama>=0.4.0",
    "python-dotenv>=1.0.0",
    "lxml>=5.3.0",
    "aiosqlite>=0.20.0",

    "aiohttp>=3.8.0",
    "tenacity>=8.2.0",
    "lxml>=4.9.0",
    "xmltodict>=0.13.0",
    "requests>=2.31.0",
    "rdflib>=6.3.0",  # for RDF parsing

    "pypdf>=3.17.0",       # PDF text extraction
    "python-docx>=0.8.11", # DOCX text extraction
    "beautifulsoup4>=4.12.0",  # HTML parsing for web traversal
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "httpx>=0.28.0",
    "aioresponses>=0.7.8",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
